[package]
name = "limit_order_book"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "4.6.0"
chrono = { version="0.4.39" , features=["serde"]}
dashmap="6.1.0"
crossbeam-skiplist = "0.1.3"
rand = "0.8.5"
crossbeam-utils = "0.8.21"
crossbeam = "0.8.4"
rand_chacha = "0.3.1"
serde = { version = "1.0.217", features = ["derive"] }


